--- a/src/diagramador/latex/templates/braunchem.sty
+++ b/src/diagramador/latex/templates/braunchem.sty
@@ -695,6 +695,7 @@
 
 \cs_set:Npn \DisplayElements #1
 	{
+		\smallskip
         \str_case:VnF \l_elements_display_style_tl
             {
                 { table }
