--- a/src/diagramador/latex/templates/braunchem.sty
+++ b/src/diagramador/latex/templates/braunchem.sty
@@ -617,9 +617,9 @@
 				};
 			\node (number) 
 				[ 
-					anchor = north~ west,
+					anchor = north~west,
 				] 
-				at (cell.north~ west)
+				at (cell.north~west)
 				{ 
 					\tl_use:N \l_ptable_number_font_tl
 					\GetElementProperty {#1}{number}  
@@ -631,7 +631,7 @@
 				at (cell.south)
 				{ 
 					\tl_use:N \l_ptable_property_font_tl
-					\GetElementProperty {#1}{mass}  
+					\GetElementProperty {#1}{mass}
 				};
 		\end{tikzpicture}
 
@@ -737,7 +737,7 @@
 		number = 1, 
 		symbol = H, 
 		name = Hydrogen, 
-		mass = 1.01, 
+		mass = {1,01}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_He_prop
@@ -745,7 +745,7 @@
 		number = 2, 
 		symbol = He, 
 		name = Helium, 
-		mass = 4.00, 
+		mass = {4,00}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Li_prop
@@ -753,7 +753,7 @@
 		number = 3, 
 		symbol = Li, 
 		name = Lithium, 
-		mass = 6.94, 
+		mass = {6,94}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Be_prop
@@ -761,7 +761,7 @@
 		number = 4, 
 		symbol = Be, 
 		name = Beryllium, 
-		mass = 9.01, 
+		mass = {9,01}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_B_prop
@@ -769,7 +769,7 @@
 		number = 5, 
 		symbol = B, 
 		name = Boron, 
-		mass = 10.81, 
+		mass = {10,81}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_C_prop
@@ -777,7 +777,7 @@
 		number = 6, 
 		symbol = C, 
 		name = Carbon, 
-		mass = 12.01, 
+		mass = {12,01}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_N_prop
@@ -785,7 +785,7 @@
 		number = 7, 
 		symbol = N, 
 		name = Nitrogen, 
-		mass = 14.01, 
+		mass = {14,01}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_O_prop
@@ -793,7 +793,7 @@
 		number = 8, 
 		symbol = O, 
 		name = Oxygen, 
-		mass = 16.00, 
+		mass = {16,00}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_F_prop
@@ -801,7 +801,7 @@
 		number = 9, 
 		symbol = F, 
 		name = Fluorine, 
-		mass = 19.00, 
+		mass = {19,00}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ne_prop
@@ -809,7 +809,7 @@
 		number = 10, 
 		symbol = Ne, 
 		name = Neon, 
-		mass = 20.18, 
+		mass = {20,18}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Na_prop
@@ -817,7 +817,7 @@
 		number = 11, 
 		symbol = Na, 
 		name = Sodium, 
-		mass = 22.99, 
+		mass = {22,99}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Mg_prop
@@ -825,7 +825,7 @@
 		number = 12, 
 		symbol = Mg, 
 		name = Magnesium, 
-		mass = 24.31, 
+		mass = {24,31}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Al_prop
@@ -833,7 +833,7 @@
 		number = 13, 
 		symbol = Al, 
 		name = Aluminium, 
-		mass = 26.98, 
+		mass = {26,98}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Si_prop
@@ -841,7 +841,7 @@
 		number = 14, 
 		symbol = Si, 
 		name = Silicon, 
-		mass = 28.09, 
+		mass = {28,09}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_P_prop
@@ -849,7 +849,7 @@
 		number = 15, 
 		symbol = P, 
 		name = Phosphorus, 
-		mass = 30.97, 
+		mass = {30,97}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_S_prop
@@ -857,7 +857,7 @@
 		number = 16, 
 		symbol = S, 
 		name = Sulfur, 
-		mass = 32.06, 
+		mass = {32,06}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Cl_prop
@@ -865,7 +865,7 @@
 		number = 17, 
 		symbol = Cl, 
 		name = Chlorine, 
-		mass = 35.45, 
+		mass = {35,45}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ar_prop
@@ -873,7 +873,7 @@
 		number = 18, 
 		symbol = Ar, 
 		name = Argon, 
-		mass = 39.95, 
+		mass = {39,95}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_K_prop
@@ -881,7 +881,7 @@
 		number = 19, 
 		symbol = K, 
 		name = Potassium, 
-		mass = 39.10, 
+		mass = {39,10}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ca_prop
@@ -889,7 +889,7 @@
 		number = 20, 
 		symbol = Ca, 
 		name = Calcium, 
-		mass = 40.08, 
+		mass = {40,08}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Sc_prop
@@ -897,7 +897,7 @@
 		number = 21, 
 		symbol = Sc, 
 		name = Scandium, 
-		mass = 44.96, 
+		mass = {44,96}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ti_prop
@@ -905,7 +905,7 @@
 		number = 22, 
 		symbol = Ti, 
 		name = Titanium, 
-		mass = 47.87, 
+		mass = {47,87}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_V_prop
@@ -913,7 +913,7 @@
 		number = 23, 
 		symbol = V, 
 		name = Vanadium, 
-		mass = 50.94, 
+		mass = {50,94}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Cr_prop
@@ -921,7 +921,7 @@
 		number = 24, 
 		symbol = Cr, 
 		name = Chromium, 
-		mass = 52.00, 
+		mass = {52,00}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Mn_prop
@@ -929,7 +929,7 @@
 		number = 25, 
 		symbol = Mn, 
 		name = Manganese, 
-		mass = 54.94, 
+		mass = {54,94}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Fe_prop
@@ -937,7 +937,7 @@
 		number = 26, 
 		symbol = Fe, 
 		name = Iron, 
-		mass = 55.84, 
+		mass = {55,84}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Co_prop
@@ -945,7 +945,7 @@
 		number = 27, 
 		symbol = Co, 
 		name = Cobalt, 
-		mass = 58.93, 
+		mass = {58,93}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ni_prop
@@ -953,7 +953,7 @@
 		number = 28, 
 		symbol = Ni, 
 		name = Nickel, 
-		mass = 58.69, 
+		mass = {58,69}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Cu_prop
@@ -961,7 +961,7 @@
 		number = 29, 
 		symbol = Cu, 
 		name = Copper, 
-		mass = 63.55, 
+		mass = {63,55}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Zn_prop
@@ -969,7 +969,7 @@
 		number = 30, 
 		symbol = Zn, 
 		name = Zinc, 
-		mass = 65.38, 
+		mass = {65,38}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ga_prop
@@ -977,7 +977,7 @@
 		number = 31, 
 		symbol = Ga, 
 		name = Gallium, 
-		mass = 69.72, 
+		mass = {69,72}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ge_prop
@@ -985,7 +985,7 @@
 		number = 32, 
 		symbol = Ge, 
 		name = Germanium, 
-		mass = 72.63, 
+		mass = {72,63}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_As_prop
@@ -993,7 +993,7 @@
 		number = 33, 
 		symbol = As, 
 		name = Arsenic, 
-		mass = 74.92, 
+		mass = {74,92}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Se_prop
@@ -1001,7 +1001,7 @@
 		number = 34, 
 		symbol = Se, 
 		name = Selenium, 
-		mass = 78.97, 
+		mass = {78,97}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Br_prop
@@ -1009,7 +1009,7 @@
 		number = 35, 
 		symbol = Br, 
 		name = Bromine, 
-		mass = 79.90, 
+		mass = {79,90}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Kr_prop
@@ -1017,7 +1017,7 @@
 		number = 36, 
 		symbol = Kr, 
 		name = Krypton, 
-		mass = 83.80, 
+		mass = {83,80}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Rb_prop
@@ -1025,7 +1025,7 @@
 		number = 37, 
 		symbol = Rb, 
 		name = Rubidium, 
-		mass = 85.47, 
+		mass = {85,47}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Sr_prop
@@ -1033,7 +1033,7 @@
 		number = 38, 
 		symbol = Sr, 
 		name = Strontium, 
-		mass = 87.62, 
+		mass = {87,62}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Y_prop
@@ -1041,7 +1041,7 @@
 		number = 39, 
 		symbol = Y, 
 		name = Yttrium, 
-		mass = 88.91, 
+		mass = {88,91}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Zr_prop
@@ -1049,7 +1049,7 @@
 		number = 40, 
 		symbol = Zr, 
 		name = Zirconium, 
-		mass = 91.22, 
+		mass = {91,22}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Nb_prop
@@ -1057,7 +1057,7 @@
 		number = 41, 
 		symbol = Nb, 
 		name = Niobium, 
-		mass = 92.91, 
+		mass = {92,91}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Mo_prop
@@ -1065,7 +1065,7 @@
 		number = 42, 
 		symbol = Mo, 
 		name = Molybdenum, 
-		mass = 95.95, 
+		mass = {95,95}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Tc_prop
@@ -1073,7 +1073,7 @@
 		number = 43, 
 		symbol = Tc, 
 		name = Technetium, 
-		mass = 97.91, 
+		mass = {97,91}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ru_prop
@@ -1081,7 +1081,7 @@
 		number = 44, 
 		symbol = Ru, 
 		name = Ruthenium, 
-		mass = 101.07, 
+		mass = {101,07}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Rh_prop
@@ -1089,7 +1089,7 @@
 		number = 45, 
 		symbol = Rh, 
 		name = Rhodium, 
-		mass = 102.91, 
+		mass = {102,91}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Pd_prop
@@ -1097,7 +1097,7 @@
 		number = 46, 
 		symbol = Pd, 
 		name = Palladium, 
-		mass = 106.42, 
+		mass = {106,42}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ag_prop
@@ -1105,7 +1105,7 @@
 		number = 47, 
 		symbol = Ag, 
 		name = Silver, 
-		mass = 107.87, 
+		mass = {107,87}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Cd_prop
@@ -1113,7 +1113,7 @@
 		number = 48, 
 		symbol = Cd, 
 		name = Cadmium, 
-		mass = 112.41, 
+		mass = {112,41}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_In_prop
@@ -1121,7 +1121,7 @@
 		number = 49, 
 		symbol = In, 
 		name = Indium, 
-		mass = 114.82, 
+		mass = {114,82}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Sn_prop
@@ -1129,7 +1129,7 @@
 		number = 50, 
 		symbol = Sn, 
 		name = Tin, 
-		mass = 118.71, 
+		mass = {118,71}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Sb_prop
@@ -1137,7 +1137,7 @@
 		number = 51, 
 		symbol = Sb, 
 		name = Antimony, 
-		mass = 121.76, 
+		mass = {121,76}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Te_prop
@@ -1145,7 +1145,7 @@
 		number = 52, 
 		symbol = Te, 
 		name = Tellurium, 
-		mass = 127.60, 
+		mass = {127,60}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_I_prop
@@ -1153,7 +1153,7 @@
 		number = 53, 
 		symbol = I, 
 		name = Iodine, 
-		mass = 126.90, 
+		mass = {126,90}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Xe_prop
@@ -1161,7 +1161,7 @@
 		number = 54, 
 		symbol = Xe, 
 		name = Xenon, 
-		mass = 131.29, 
+		mass = {131,29}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Cs_prop
@@ -1169,7 +1169,7 @@
 		number = 55, 
 		symbol = Cs, 
 		name = Caesium, 
-		mass = 132.91, 
+		mass = {132,91}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ba_prop
@@ -1177,7 +1177,7 @@
 		number = 56, 
 		symbol = Ba, 
 		name = Barium, 
-		mass = 137.33, 
+		mass = {137,33}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_La_prop
@@ -1185,7 +1185,7 @@
 		number = 57, 
 		symbol = La, 
 		name = Lanthanum, 
-		mass = 138.91, 
+		mass = {138,91}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ce_prop
@@ -1193,7 +1193,7 @@
 		number = 58, 
 		symbol = Ce, 
 		name = Cerium, 
-		mass = 140.12, 
+		mass = {140,12}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Pr_prop
@@ -1201,7 +1201,7 @@
 		number = 59, 
 		symbol = Pr, 
 		name = Praseodymium, 
-		mass = 140.91, 
+		mass = {140,91}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Nd_prop
@@ -1209,7 +1209,7 @@
 		number = 60, 
 		symbol = Nd, 
 		name = Neodymium, 
-		mass = 144.24, 
+		mass = {144,24}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Pm_prop
@@ -1217,7 +1217,7 @@
 		number = 61, 
 		symbol = Pm, 
 		name = Promethium, 
-		mass = 144.91, 
+		mass = {144,91}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Sm_prop
@@ -1225,7 +1225,7 @@
 		number = 62, 
 		symbol = Sm, 
 		name = Samarium, 
-		mass = 150.36, 
+		mass = {150,36}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Eu_prop
@@ -1233,7 +1233,7 @@
 		number = 63, 
 		symbol = Eu, 
 		name = Europium, 
-		mass = 151.96, 
+		mass = {151,96}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Gd_prop
@@ -1241,7 +1241,7 @@
 		number = 64, 
 		symbol = Gd, 
 		name = Gadolinium, 
-		mass = 157.25, 
+		mass = {157,25}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Tb_prop
@@ -1249,7 +1249,7 @@
 		number = 65, 
 		symbol = Tb, 
 		name = Terbium, 
-		mass = 158.93, 
+		mass = {158,93}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Dy_prop
@@ -1257,7 +1257,7 @@
 		number = 66, 
 		symbol = Dy, 
 		name = Dysprosium, 
-		mass = 162.50, 
+		mass = {162,50}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ho_prop
@@ -1265,7 +1265,7 @@
 		number = 67, 
 		symbol = Ho, 
 		name = Holmium, 
-		mass = 164.93, 
+		mass = {164,93}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Er_prop
@@ -1273,7 +1273,7 @@
 		number = 68, 
 		symbol = Er, 
 		name = Erbium, 
-		mass = 167.26, 
+		mass = {167,26}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Tm_prop
@@ -1281,7 +1281,7 @@
 		number = 69, 
 		symbol = Tm, 
 		name = Thulium, 
-		mass = 168.93, 
+		mass = {168,93}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Yb_prop
@@ -1289,7 +1289,7 @@
 		number = 70, 
 		symbol = Yb, 
 		name = Ytterbium, 
-		mass = 173.05, 
+		mass = {173,05}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Lu_prop
@@ -1297,7 +1297,7 @@
 		number = 71, 
 		symbol = Lu, 
 		name = Lutetium, 
-		mass = 174.97, 
+		mass = {174,97}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Hf_prop
@@ -1305,7 +1305,7 @@
 		number = 72, 
 		symbol = Hf, 
 		name = Hafnium, 
-		mass = 178.49, 
+		mass = {178,49}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ta_prop
@@ -1313,7 +1313,7 @@
 		number = 73, 
 		symbol = Ta, 
 		name = Tantalum, 
-		mass = 180.95, 
+		mass = {180,95}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_W_prop
@@ -1321,7 +1321,7 @@
 		number = 74, 
 		symbol = W, 
 		name = Tungsten, 
-		mass = 183.84, 
+		mass = {183,84}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Re_prop
@@ -1329,7 +1329,7 @@
 		number = 75, 
 		symbol = Re, 
 		name = Rhenium, 
-		mass = 186.21, 
+		mass = {186,21}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Os_prop
@@ -1337,7 +1337,7 @@
 		number = 76, 
 		symbol = Os, 
 		name = Osmium, 
-		mass = 190.23, 
+		mass = {190,23}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ir_prop
@@ -1345,7 +1345,7 @@
 		number = 77, 
 		symbol = Ir, 
 		name = Iridium, 
-		mass = 192.22, 
+		mass = {192,22}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Pt_prop
@@ -1353,7 +1353,7 @@
 		number = 78, 
 		symbol = Pt, 
 		name = Platinum, 
-		mass = 195.08, 
+		mass = {195,08}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Au_prop
@@ -1361,7 +1361,7 @@
 		number = 79, 
 		symbol = Au, 
 		name = Gold, 
-		mass = 196.97, 
+		mass = {196,97}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Hg_prop
@@ -1369,7 +1369,7 @@
 		number = 80, 
 		symbol = Hg, 
 		name = Mercury, 
-		mass = 200.59, 
+		mass = {200,59}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Tl_prop
@@ -1377,7 +1377,7 @@
 		number = 81, 
 		symbol = Tl, 
 		name = Thallium, 
-		mass = 204.38, 
+		mass = {204,38}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Pb_prop
@@ -1385,7 +1385,7 @@
 		number = 82, 
 		symbol = Pb, 
 		name = Lead, 
-		mass = 207.20, 
+		mass = {207,20}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Bi_prop
@@ -1393,7 +1393,7 @@
 		number = 83, 
 		symbol = Bi, 
 		name = Bismuth, 
-		mass = 208.98, 
+		mass = {208,98}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Po_prop
@@ -1401,7 +1401,7 @@
 		number = 84, 
 		symbol = Po, 
 		name = Polonium, 
-		mass = 208.98, 
+		mass = {208,98}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_At_prop
@@ -1409,7 +1409,7 @@
 		number = 85, 
 		symbol = At, 
 		name = Astatine, 
-		mass = 209.99, 
+		mass = {209,99}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Rn_prop
@@ -1417,7 +1417,7 @@
 		number = 86, 
 		symbol = Rn, 
 		name = Radon, 
-		mass = 222.02, 
+		mass = {222,02}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Fr_prop
@@ -1425,7 +1425,7 @@
 		number = 87, 
 		symbol = Fr, 
 		name = Francium, 
-		mass = 223.02, 
+		mass = {223,02}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ra_prop
@@ -1433,7 +1433,7 @@
 		number = 88, 
 		symbol = Ra, 
 		name = Radium, 
-		mass = 226.03, 
+		mass = {226,03}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Ac_prop
@@ -1441,7 +1441,7 @@
 		number = 89, 
 		symbol = Ac, 
 		name = Actinium, 
-		mass = 227.03, 
+		mass = {227,03}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Th_prop
@@ -1449,7 +1449,7 @@
 		number = 90, 
 		symbol = Th, 
 		name = Thorium, 
-		mass = 232.04, 
+		mass = {232,04}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Pa_prop
@@ -1457,7 +1457,7 @@
 		number = 91, 
 		symbol = Pa, 
 		name = Protactinium, 
-		mass = 231.04, 
+		mass = {231,04}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_U_prop
@@ -1465,7 +1465,7 @@
 		number = 92, 
 		symbol = U, 
 		name = Uranium, 
-		mass = 238.03, 
+		mass = {238,03}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Np_prop
@@ -1473,7 +1473,7 @@
 		number = 93, 
 		symbol = Np, 
 		name = Neptunium, 
-		mass = 237.05, 
+		mass = {237,05}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Pu_prop
@@ -1481,7 +1481,7 @@
 		number = 94, 
 		symbol = Pu, 
 		name = Plutonium, 
-		mass = 244.06, 
+		mass = {244,06}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Am_prop
@@ -1489,7 +1489,7 @@
 		number = 95, 
 		symbol = Am, 
 		name = Americium, 
-		mass = 243.06, 
+		mass = {243,06}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Cm_prop
@@ -1497,7 +1497,7 @@
 		number = 96, 
 		symbol = Cm, 
 		name = Curium, 
-		mass = 247.07, 
+		mass = {247,07}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Bk_prop
@@ -1505,7 +1505,7 @@
 		number = 97, 
 		symbol = Bk, 
 		name = Berkelium, 
-		mass = 247.07, 
+		mass = {247,07}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Cf_prop
@@ -1513,7 +1513,7 @@
 		number = 98, 
 		symbol = Cf, 
 		name = Californium, 
-		mass = 251.08, 
+		mass = {251,08}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Es_prop
@@ -1521,7 +1521,7 @@
 		number = 99, 
 		symbol = Es, 
 		name = Einsteinium, 
-		mass = 252.08, 
+		mass = {252,08}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Fm_prop
@@ -1529,7 +1529,7 @@
 		number = 100, 
 		symbol = Fm, 
 		name = Fermium, 
-		mass = 257.10, 
+		mass = {257,10}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Md_prop
@@ -1537,7 +1537,7 @@
 		number = 101, 
 		symbol = Md, 
 		name = Mendelevium, 
-		mass = 258.10, 
+		mass = {258,10}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_No_prop
@@ -1545,7 +1545,7 @@
 		number = 102, 
 		symbol = No, 
 		name = Nobelium, 
-		mass = 259.10, 
+		mass = {259,10}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Lr_prop
@@ -1553,7 +1553,7 @@
 		number = 103, 
 		symbol = Lr, 
 		name = Lawrencium, 
-		mass = 262.11, 
+		mass = {262,11}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Rf_prop
@@ -1561,7 +1561,7 @@
 		number = 104, 
 		symbol = Rf, 
 		name = Rutherfordium, 
-		mass = 267.12, 
+		mass = {267,12}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Db_prop
@@ -1569,7 +1569,7 @@
 		number = 105, 
 		symbol = Db, 
 		name = Dubnium, 
-		mass = 268.13, 
+		mass = {268,13}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Sg_prop
@@ -1577,7 +1577,7 @@
 		number = 106, 
 		symbol = Sg, 
 		name = Seaborgium, 
-		mass = 271.13, 
+		mass = {271,13}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Bh_prop
@@ -1585,7 +1585,7 @@
 		number = 107, 
 		symbol = Bh, 
 		name = Bohrium, 
-		mass = 272.14, 
+		mass = {272,14}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Hs_prop
@@ -1593,7 +1593,7 @@
 		number = 108, 
 		symbol = Hs, 
 		name = Hassium, 
-		mass = 270.13, 
+		mass = {270,13}, 
 	}
 
 \prop_const_from_keyval:Nn \c_elements_Mt_prop
@@ -1601,7 +1601,7 @@
 		number = 109, 
 		symbol = Mt, 
 		name = Meitnerium, 
-		mass = 276.15, 
+		mass = {276,15}, 
 	}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
