--- a/src/diagramador/latex/templates/braun.cls
+++ b/src/diagramador/latex/templates/braun.cls
@@ -1454,7 +1454,7 @@
                         [
                             \bfseries
                             \skip_horizontal:n {2em}
-                            Valor: ~  
+                            Valor:: ~  
                             \num 
                                 [ 
                                     detect-all, 
